--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,6 +2,7 @@ name: Elixir CI
 
 on:
   push:
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -10,7 +11,7 @@ jobs:
   build:
 
     name: Build and test
-    runs-on: "ubuntu:20.04"
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres
